--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,9 @@
 @use "variables";
 @use "header";
+@use "footer";
+@use "index";
 
 body {
     background-color: variables.$color-5;
+    font-family: 'Lato', sans-serif;
 }
