--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,5 +1,7 @@
 @use "variables";
 
+/* Section Présentation */
+
 .image__moi {
     width: 100%;
     border-radius: 15rem;
@@ -16,8 +18,98 @@ h2 {
     color: variables.$color-3;
     border-bottom: solid 0.25rem variables.$color-1;
     margin-top: 5rem;
+    margin-bottom: 2rem;
 }
 
-.icon__loisir {
+.icon__loisir--roller {
     background-color: variables.$color-3;
+    padding: 3rem 1rem 3rem 1rem;
+    border-radius: 25rem;
+    &:hover {
+        background-color: variables.$color-2;
+        border: solid 0.125rem variables.$color-1;
+    }
+}
+
+.icon__loisir--arts {
+    background-color: variables.$color-4;
+    padding: 3rem 1rem 3rem 1rem;
+    border-radius: 25rem;
+    &:hover {
+        background-color: variables.$color-2;
+        border: solid 0.125rem variables.$color-1;
+    }
+}
+
+.icon__loisir--auto {
+    background-color: variables.$color-5;
+    padding: 3rem 1rem 3rem 1rem;
+    border-radius: 25rem;
+    &:hover {
+        background-color: variables.$color-2;
+        border: solid 0.125rem variables.$color-1;
+    }
+}
+
+.icon__loisir--flex {
+    display: flex;
+}
+
+.section__presentation--text {
+    color: variables.$color-1;
+    margin-top: 2rem;
+}
+
+/* Section Roller Skate */
+
+#section__rollerskate {
+    margin-top: 2rem;
+    padding: 2rem;
+    background-color: variables.$color-2;
+}
+
+.section__rollerskate--video {
+    width: 100%;
+    border-radius: 1rem;
+}
+
+/* Section Arts */
+
+#section__arts {
+    margin-top: 2rem;
+    padding: 2rem;
+    background-color: variables.$color-2;
+}
+
+.image__grille {
+    width: 100%;
+}
+
+.image__grille--tablette1 {
+    width: 100%;
+    margin-left: -1.5rem;
+    margin-bottom: -41rem;
+}
+
+.image__grille--fusain {
+    width: 100%;
+    margin-left: -1.5rem;
+}
+
+.image__grille--diamondpainting {
+    width: 100%;
+    margin-left: -3rem;
+}
+
+.image__grille--crane {
+    width: 100%;
+    margin-left: -1.5rem;
+}
+
+/* Section Automobile */
+
+#section__automobile {
+    margin-top: 2rem;
+    padding: 2rem;
+    background-color: variables.$color-2;
 }
