--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,6 +6,10 @@
     border-bottom: solid 1rem variables.$color-2;
 }
 
+.headerNav__burger {
+    background-color: variables.$color-1;
+}
+
 .header__logo {
     width: 10rem;
 }
@@ -44,3 +48,35 @@ h1 {
     color: variables.$color-3;
 }
 
+.row {
+    width: 100%;
+}
+
+.navbar__burger--flexbutton {
+    display: flex;
+    justify-content: flex-end;
+    height: 3rem;
+}
+
+.navbar__burger--flex {
+    display: flex;
+    align-items: center;
+}
+
+@media screen and (max-width: 1400px) {
+    .navbar__general {
+        display: block;
+    }
+    .navbar__burger {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .navbar__general {
+        display: none;
+    }
+    .navbar__burger {
+        display: block;
+    }
+}
