--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -106,6 +106,56 @@ h2 {
     margin-left: -1.5rem;
 }
 
+@media screen and (max-width: 1399px) {
+    .image__grille--tablette1 {
+        margin-bottom: -34rem;
+    }
+}
+
+@media screen and (max-width: 1199px) {
+    .image__grille--tablette1 {
+        margin-bottom: -28rem;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .image__grille--tablette1 {
+        margin-bottom: -19rem;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .image__grille--tablette1 {
+        margin-bottom: -6rem;
+        margin-left: 1.5rem;
+    }
+
+    .image__grille--fusain {
+        margin-left: 1.5rem;
+    }
+
+    .image__grille--diamondpainting {
+        margin-left: 0rem;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .image__grille--tablette1 {
+        margin-bottom: 0rem;
+        margin-left: 0;
+    }
+
+    .image__grille--fusain {
+        margin-left: 0;
+    }
+
+    .image__grille--crane {
+        margin-left: 0;
+    }
+}
+
+
+
 /* Section Automobile */
 
 #section__automobile {
