--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,27 @@ h2 {
   background-color: #F5F5F5;
 }
 
+.row--cardrollerskate {
+  margin-left: 0.0125rem;
+}
+
+.card {
+  background-color: #F5F5F5;
+  margin-top: 2rem;
+}
+
+.card-img-top {
+  margin-top: 0.5rem;
+  margin-bottom: -5rem;
+}
+
+.btn__card {
+  width: 100%;
+  background-color: #131313;
+  color: #BBD0FF;
+  border: solid 0.25rem #BBD0FF;
+}
+
 body {
   background-color: #BBD0FF;
   font-family: "Lato", sans-serif;
