--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,10 @@ h2 {
   border: solid 0.25rem #BBD0FF;
 }
 
+.h2--haut {
+  margin-top: -0.25rem;
+}
+
 body {
   background-color: #BBD0FF;
   font-family: "Lato", sans-serif;
