v15 supposer etre final

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -34,3 +34,9 @@ footer {
         justify-content: flex-start;
     }
 }
+
+.btn--PWA {
+    color: #B8C0FF;
+    border: solid 0.25rem #B8C0FF;
+    background-color: variables.$color-1;
+}
