--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ h1 {
   align-items: center;
 }
 
-@media screen and (max-width: 1900px) {
+@media screen and (max-width: 3840px) {
   .navbar__general {
     display: block;
   }
@@ -115,6 +115,12 @@ footer {
     justify-content: flex-start;
   }
 }
+.btn--PWA {
+  color: #B8C0FF;
+  border: solid 0.25rem #B8C0FF;
+  background-color: #131313;
+}
+
 /* Section Présentation */
 .image__moi {
   width: 100%;
