--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ footer {
     justify-content: flex-start;
   }
 }
-.btn--PWA {
+.btn--PWA, #btnInstall {
   color: #B8C0FF;
   border: solid 0.25rem #B8C0FF;
   background-color: #131313;
