--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -35,7 +35,7 @@ footer {
     }
 }
 
-.btn--PWA {
+.btn--PWA, #btnInstall{
     color: #B8C0FF;
     border: solid 0.25rem #B8C0FF;
     background-color: variables.$color-1;
